# verifiable-intent

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  conftest.py  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  deploy-vps.yml
docs/: index.md  protocol-landscape
docs/overrides/: home.html  main.html
docs/stylesheets/: extra.css
examples/: autonomous_flow.py  constraint_checking.py  helpers.py  immediate_flow.py  network_validation.py  selective_disclosure.py
protocol-landscape/: glossary.md  index.md  protocols.md
spec/: README.md  constraints.md  credential-format.md  design-rationale.md  security-model.md
src/verifiable_intent/: __init__.py
src/verifiable_intent/crypto/: __init__.py  disclosure.py  jcs.py  kb_sd_jwt.py  sd_jwt.py  signing.py
src/verifiable_intent/issuance/: __init__.py  agent.py  issuer.py  user.py
src/verifiable_intent/models/: __init__.py  agent_mandate.py  cart.py  constraints.py  issuer_credential.py  (+1 more)
tests/: conftest.py  test_aud_nonce.py  test_authorization_scope.py  test_autonomous_flow.py  test_card_id.py  test_chain_binding.py  test_checkout_jwt_type.py  test_configurable_vct.py  test_constraint_checking.py  test_constraints_none.py  test_examples.py  test_immediate_flow.py  test_merchant_schema.py  test_mode_enforcement.py  test_mode_inference.py  test_multi_pair.py  test_network_validation.py  test_new_constraints.py  test_package_exports.py  test_reference_binding.py  test_review_fixes.py  test_review_round4_fixes.py  test_schema_validation.py  test_selective_disclosure.py  test_selective_routing.py  test_verification_bypass.py  test_verification_hardening.py
(+4 files in other folders)
