[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "verifiable-intent"
version = "0.1.0"
description = "Open specification for cryptographic agent authorization in commerce"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Verifiable Intent Contributors" },
]
keywords = ["sd-jwt", "agent", "payments", "authorization", "commerce", "credentials", "delegation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "cryptography>=42.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.15",
]
docs = [
    "mkdocs-material==9.7.2",
]

[project.urls]
Homepage = "https://github.com/agent-intent/verifiable-intent"
Repository = "https://github.com/agent-intent/verifiable-intent"
Issues = "https://github.com/agent-intent/verifiable-intent/issues"

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["src", "tests", "examples"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.per-file-ignores]
"examples/helpers.py" = ["E402"]

[tool.hatch.build.targets.wheel]
packages = ["src/verifiable_intent"]
